# agent-factory

./: .env  .env.production  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT_STATUS.md  DOCKER_README_SECTION.md  Dockerfile  ONBOARDING.md  PROJECT_PROGRESS.md  QUICKSTART.md  README.md  README_COMPLETED.md  TASK_MEMORY_UPDATE.md  WARP_DRIVE_PROMPTS.md  claude-bedrock-setup.md  deploy_system.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_agent_system.py
.claude/agents/: seo-analyzer.md  seo-collector.md  seo-processor.md
.claude/commands/: rovo-alias.md
.claude/commands/prp-commands/: prp-poc-create-parallel.md  prp-poc-execute-parallel.md
.cursor/rules/: agent-development-patterns.mdc  architecture-patterns.mdc  development-commands.mdc  project-overview.mdc  prp-development-workflow.mdc  python-coding-standards.mdc  testing-quality-standards.mdc
.github/workflows/: azure-deploy.yml
.rovodev/: instructions.yml  prp-create-and-execute-a-feature.md
.serena/: project.yml
.serena/memories/: archon_knowledge_base_status.md  code_style_conventions.md  hetzner_infrastructure.md  project_overview.md  seo_aggregator_analysis.md  seo_aggregator_documentation_context.md  seo_aggregator_ux_analysis.md  seo_analytics_implementation.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
PRPs/: agent-driven-autonomous-development-framework.md  checklist.md
PRPs/scripts/: validate  validate_prp.py
PRPs/templates/: prp_poc_react.md
SPEC_PRP/: planning-template-integration.md  prp-spec-enhancement.md  react-poc-template-integration.md  typescript-template-integration.md
claude_md_files/: CLAUDE-RUST.md
docker/: prometheus.yml
docs/: .session-log.md  API_REFERENCE.md  ARCHITECTURE.md  AZURE.md  CONFIGURATION.md  DEVELOPER_REFERENCE.md  DOCUMENTATION_STATUS.md  PROJECT_STRUCTURE.md  ROVODEV.md  SHARED_COMPONENTS.md  TROUBLESHOOTING.md  USER_GUIDE.md  index.md
infra/azure/: main.bicep
requirements/: base.txt  dev.txt
scripts/: dev-start.sh  direct_knowledge_update.py  github_token_setup.md  init_project.py  prod-deploy.sh  simple_knowledge_update.py  test_github_token.py  test_init.py  update_knowledge_base.py
src/: __init__.py  models.py
src/agent_factory/: __init__.py  cli.py  models.py
src/agents/: __init__.py
src/api/: health_endpoints.py  health_monitor.py
src/communication/: __init__.py
src/config/: logging.py  seo_settings.py  settings.py
src/dashboard/: agent_dashboard.py
src/knowledge/: __init__.py
src/models/: __init__.py  base.py  seo.py
src/workflows/: __init__.py
tests/: __init__.py  conftest.py  test_base_agent.py  test_chroma_store.py  test_models.py  test_redis_messenger.py
(+58 files in other folders)
