[project]
name = "agent-factory"
version = "0.1.0"
description = "AI Agent Factory with PRP Framework Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core agent framework
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    # Vector database and embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    # Message bus and communication
    "redis>=5.0.1",
    "redis[hiredis]>=5.0.1",
    # Web framework and API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "streamlit>=1.28.0",
    # Data processing and serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Async and concurrency
    "asyncio-mqtt>=0.16.1",
    "aiofiles>=23.2.1",
    "aioredis>=2.0.1",
    # External tool integrations
    "GitPython>=3.1.40",
    "docker>=6.1.3",
    # Testing and quality
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    # Logging and monitoring
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tenacity>=8.2.3",
    "boto3>=1.40.14",
   "openai>=1.30.0",
]

[project.scripts]
rovodev = "agent_factory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
